Updated page layout

--- a/main.html
+++ b/main.html
@@ -23,14 +23,30 @@
     </div>
     <!-- Tabs -->
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-      <a href="#fixed-tab-1" class="mdl-layout__tab is-active">CREATE</a>
-      <a href="#fixed-tab-2" class="mdl-layout__tab">READ</a>
+      <a href="#fixed-tab-1" class="mdl-layout__tab is-active">READ</a>
+      <a href="#fixed-tab-2" class="mdl-layout__tab">CREATE</a>
       <a href="#fixed-tab-3" class="mdl-layout__tab">UPDATE</a>
-      <a href="#fixed-tab-3" class="mdl-layout__tab">DELETE</a>
     </div>
   </header>
   <main class="mdl-layout__content">
-    <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
+    <section class="mdl-layout__tab-panel" id="fixed-tab-1">
+      <div class="page-content">
+        <div id="pagenum"></div>
+        <table class="mdl-data-table mdl-js-data-table">
+          <thead>
+            <tr>
+              <th class="mdl-data-table__cell--non-numeric">Name</th>
+              <th class="mdl-data-table__cell--non-numeric">Email</th>
+              <th class="mdl-data-table__cell--non-numeric">Gender</th>
+              <th class="mdl-data-table__cell--non-numeric">Status</th>
+            </tr>
+          </thead>
+          <tbody id="displaytable">
+          </tbody>
+        </table>
+        </div>
+    </section>
+    <section class="mdl-layout__tab-panel is-active" id="fixed-tab-2">
       <div class="page-content">
         <form action="#">
           <span class="mdl-layout-title">Name</span>
@@ -67,34 +83,14 @@
             <span class="mdl-radio__label">Inactive</span>
           </label>
         </div><br>
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" onclick=create()>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" onclick="create()">
           Create
         </button>
       </div>
     </section>
-    <section class="mdl-layout__tab-panel" id="fixed-tab-2">
-      <div class="page-content">
-        <table class="mdl-data-table mdl-js-data-table">
-          <thead>
-            <tr>
-              <th class="mdl-data-table__cell--non-numeric">Name</th>
-              <th class="mdl-data-table__cell--non-numeric">Email</th>
-              <th class="mdl-data-table__cell--non-numeric">Gender</th>
-              <th class="mdl-data-table__cell--non-numeric">Status</th>
-            </tr>
-          </thead>
-          <tbody id="displaytable">
-          </tbody>
-        </table>
-        </div>
-    </section>
     <section class="mdl-layout__tab-panel" id="fixed-tab-3">
       <div class="page-content">Update info</div>
     </section>
-  </section>
-  <section class="mdl-layout__tab-panel" id="fixed-tab-4">
-    <div class="page-content">delete</div>
-  </section>
   </main>
 </div>
 <script src="script.js"></script>
