--- a/main.html
+++ b/main.html
@@ -40,6 +40,22 @@
               <th class="mdl-data-table__cell--non-numeric">Gender</th>
               <th class="mdl-data-table__cell--non-numeric">Status</th>
             </tr>
+            <tr>
+              <td contenteditable="true" id="nameinput"></td>
+              <td contenteditable="true" id="emailinput"></td>
+              <td class="dropdown">
+                <select name="genderlist" >
+                    <option value="male">male</option>
+                    <option value="female">female</option>
+                </select>
+             </td>
+             <td class="dropdown">
+               <select name="statuslist" >
+                   <option value="active">active</option>
+                   <option value="inactive">inactive</option>
+               </select>
+            </td><td></td><td></td><td></td><td></td>
+          </tr>
           </thead>
           <tbody id="displaytable">
           </tbody>
@@ -87,9 +103,6 @@
           Create
         </button>
       </div>
-    </section>
-    <section class="mdl-layout__tab-panel" id="fixed-tab-3">
-      <div class="page-content">Update info</div>
     </section>
   </main>
 </div>
