--- a/main.html
+++ b/main.html
@@ -51,9 +51,7 @@
              </select>
           </td>
           <td>
-            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored" onclick="create()">
-              <i class="material-icons">add</i>
-            </button>
+            <button class='mdl-button mdl-js-button mdl-button--icon' id="createbtn" onclick="create()"><i class='material-icons'>add_circle_outline</i></button>
           </td><td></td><td></td><td></td>
         </tr>
         </thead>
