--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     <div class="page-content">
       <div id="pagenum"></div>
       <label>Select page: </label><select id="selectPage"></select>
-      <button class='mdl-button mdl-js-button mdl-button--icon' onclick="goSelectedPage()"><i class="material-icons">search</i></button>
+      <button class='mdl-button mdl-js-button mdl-button--icon' id="searchBtn" onclick="goSelectedPage()"><i class="material-icons">search</i></button>
       <table class="mdl-data-table mdl-js-data-table">
         <thead>
           <tr>
