testing and debugging

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Welcome to Vimigo</span>
+      <span class="mdl-layout-title">Welcome to Vimigo!</span>
     </div>
   </header>
   <main class="mdl-layout__content">
